WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35095
[V8] Default values of V8 runtime enabler flags should match behavior of JSC
https://bugs.webkit.org/show_bug.cgi?id=35095
Summary
[V8] Default values of V8 runtime enabler flags should match behavior of JSC
Steve Block
Reported
2010-02-18 06:59:49 PST
The V8 bindings use runtime enabler flags to enable certain optional features. Currently, the default values of these flags vary from feature to feature. The default values should be chosen to match the behavior of JSC, which does not use runtime enabler flags. This will give consistent behavior on platforms such as Android which use both V8 and JSC, without the need to explicitly set the values of the flags. In particular, appcache, geolocation and database should default to 'on'. Such a change should make no difference to Chromium, as Chromium always explicitly sets a value for these flags.
Attachments
Patch
(1.96 KB, patch)
2010-02-18 07:16 PST
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-02-18 07:16:59 PST
Created
attachment 49011
[details]
Patch
WebKit Commit Bot
Comment 2
2010-02-19 09:13:58 PST
Comment on
attachment 49011
[details]
Patch Clearing flags on attachment: 49011 Committed
r55020
: <
http://trac.webkit.org/changeset/55020
>
WebKit Commit Bot
Comment 3
2010-02-19 09:14:02 PST
All reviewed patches have been landed. Closing bug.
Steve Block
Comment 4
2010-02-22 09:51:32 PST
This change caused crashes in the following layout tests on Chromium ... - window-properties.html - navigator-detached-no-crash.html It was rolled back in
http://trac.webkit.org/changeset/55022
Steve Block
Comment 5
2010-02-23 03:44:36 PST
The crashes in the Chromium layout tests were due to a bug in the Chromium test shell. This has now been fixed with
http://codereview.chromium.org/652052
Re-landed original patch as
http://trac.webkit.org/changeset/55140
Closing bug as resolved fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug