Sets default values of V8 runtime enabler flags to match behavior with JSC https://bugs.webkit.org/show_bug.cgi?id=35095

Canonical link: https://commits.webkit.org/46442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55140 268f45cc-cd09-0410-ab3c-d52691b4dbfc